--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "agl_monitor_flake"
+name = "agl_icons"
 
 packages = [
-    { include = "agl_monitor_flake" }
+    { include = "agl_icons" }
 ]
 
 version = "0.1.0"
@@ -13,12 +13,15 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-django = "~4.2"
-gunicorn = "^23.0.0"
+opencv-python-headless = "^4.10.0.84"
 
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
+
+[tool.poetry.group.nixProvided.dependencies]
+pillow = "^10.2.0"
+#potrace
 
 [build-system]
 requires = ["poetry-core"]
