--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 opencv-python-headless = "^4.10.0.84"
+potracer = "^0.0.4"
 
 
 [tool.poetry.group.dev.dependencies]
